<resources>
    <string name="app_name">TicketScanner</string>

    <!--Activity Login-->
    <string name="login">Login…</string>
    <string name="loginS">Login</string>
    <string name="password">Password…</string>
    <string name="passwordS">Password</string>
    <string name="sing_in">Sign in</string>
    <string name="are_you_new">Are you new here?</string>
    <string name="sing_on">Sign on</string>

    <!--Activity Register-->
    <string name="name">Name…</string>
    <string name="nameS">Name</string>
    <string name="surname">Surname…</string>
    <string name="surnameS">Surname</string>
    <string name="or">Or…</string>
    <string name="register">Register</string>
    <string name="create_account">Create an account</string>
    <string name="repeat_password">Repeat password…</string>
    <string name="repeat_passwordS">Repeat password</string>
    <string name="Email">E-mail…</string>
    <string name="emailS">E-mail</string>

    <!--Activity Headquartes-->
    <string name="put_event_name">Put event name</string>
    <string name="connect">Connect</string>
    <string name="connect_by_unique_name">You can connect by event name</string>
    <string name="insert_event_name">Insert a event name…</string>
    <string name="insert_event_code">Insert a event code…</string>
    <string name="log_out">Log out</string>
    <string name="you_can_also">You can also check…</string>
    <string name="my_events">My events</string>

    <!--Activity NewEvent-->
    <string name="put_unique_name">Insert unique name</string>
    <string name="put_event_code">Insert secret code</string>
    <string name="code">Code…</string>
    <string name="codeS">Code</string>
    <string name="put">Insert unique name</string>
    <string name="add">Add</string>
    <string name="menu_add">Add</string>
    <string name="add_bn">Add</string>
    <string name="user_name">User name…</string>
    <string name="user_nameS">User name</string>
    <string name="event_start">Start date</string>
    <string name="event_end">End date</string>
    <string name="end_before_start">End date is earlier</string>
    <string name="one_empty_date">Set the date</string>

    <!--Activity Scan-->
    <string name="scan_next">Scan first ticket</string>
    <string name="last_scan">Latest:&#160;</string>
    <string name="scan">Scan</string>
    <string name="base">Base:&#160;</string>

    <!--Activity MyEvents-->
    <string name="my_events_list">List of my events</string>

    <!--Not used yet-->
    <string name="choose">Choose</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="add_event">Create event</string>
    <string name="logged_as">Logged as:&#160; </string>
    <string name="is_after_login">is_after_login</string>
    <string name="is_after_register">is_after_register</string>
    <string name="create_new_db">Create new database</string>

    <!--Errors-->
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_passwords_not_equals">Passwords are not the same</string>

    <string name="error_login_used">This login is used</string>
    <string name="error_login_not_found">Login not found</string>
    <string name="error_login_cannot_include_space">Login cannot include spaces</string>

    <string name="error_event_not_found">Event not found</string>
    <string name="error_event_used">This event is used</string>
    <string name="error_event_wrong_code">Wrong code for this event </string>
    <string name="error_event_code_range">Code must had 6 digits</string>
    <string name="error_event_name_range">Name max lenght is 20 chars</string>

</resources>
