<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etNameRegister"
        android:textSize="10dp"
        android:layout_alignStart="@+id/etNameRegister"
        android:layout_marginBottom="-30dp"
        android:text="@string/nameS" />
    <EditText
        android:theme="@style/Theme.App.Base"
        android:id="@+id/etNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/surnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etSurnameRegister"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="-20dp"
        android:text="@string/surnameS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etLoginRegister"
        android:layout_width="wrap_content"
        android:theme="@style/Theme.App.Base"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etSurnameRegister"
        android:layout_alignRight="@+id/etSurnameRegister"
        android:layout_below="@+id/etSurnameRegister"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btZarejestrujKonto"
        android:layout_width="wrap_content"
        android:theme="@style/AppTheme.Button"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etPasswordRegister2"
        android:layout_alignLeft="@+id/etPasswordRegister2"
        android:layout_alignRight="@+id/etPasswordRegister2"
        android:layout_alignStart="@+id/etPasswordRegister2"
        android:layout_below="@+id/etPasswordRegister2"
        android:layout_marginTop="60dp"
        android:onClick="onClickBtZarejestrujKonto"
        android:text="@string/sing_on" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etLoginRegister"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="-20dp"
        android:text="@string/loginS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etSurnameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App.Base"
        android:layout_alignLeft="@+id/etNameRegister"
        android:layout_alignStart="@+id/etNameRegister"
        android:layout_below="@+id/etNameRegister"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etEmailRegister"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="-20dp"
        android:text="@string/emailS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="wrap_content"
        android:theme="@style/Theme.App.Base"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginRegister"
        android:layout_alignLeft="@+id/etLoginRegister"
        android:layout_alignStart="@+id/etLoginRegister"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPasswordRegister"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="-20dp"
        android:text="@string/passwordS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etPasswordRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App.Base"
        android:layout_alignLeft="@+id/etPasswordRegister"
        android:layout_alignStart="@+id/etPasswordRegister"
        android:layout_below="@+id/etPasswordRegister"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/repeatPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPasswordRegister2"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="-20dp"
        android:text="@string/repeat_passwordS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEmailRegister"
        android:layout_alignStart="@+id/etEmailRegister"
        android:theme="@style/Theme.App.Base"
        android:layout_below="@+id/etEmailRegister"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />

</RelativeLayout>