<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_logged_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/logged_as"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/put_event_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/put_event_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_event_name_hq"
        android:layout_alignStart="@+id/et_event_name_hq"
        android:layout_marginBottom="-30dp"
        android:text="@string/nameS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/et_event_name_hq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/put_event_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_event_name"
        android:inputType="textCapCharacters|textPersonName"
        android:textAlignment="center"
        android:theme="@style/Theme.App.Base" />

    <TextView
        android:id="@+id/code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_event_code_secret"
        android:layout_alignStart="@+id/et_event_name_hq"
        android:layout_marginBottom="-186dp"
        android:text="@string/codeS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/et_event_code_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/insert_event_code"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        android:theme="@style/Theme.App.Base" />

    <Button
        android:id="@+id/bt_connect_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_event_code_secret"
        android:layout_alignLeft="@+id/et_event_code_secret"
        android:layout_alignRight="@+id/et_event_code_secret"
        android:layout_alignStart="@+id/et_event_code_secret"
        android:layout_below="@+id/et_event_code_secret"
        android:layout_marginTop="25dp"
        android:text="@string/connect"
        android:theme="@style/AppTheme.Button" />


    <TextView
        android:id="@+id/tv_you_can_also"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/bt_connect_event"
        android:layout_marginTop="25dp"
        android:text="@string/you_can_also" />

    <Button
        android:id="@+id/bt_my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_event_name_hq"
        android:layout_alignLeft="@+id/et_event_name_hq"
        android:layout_alignRight="@+id/et_event_name_hq"
        android:layout_alignStart="@+id/et_event_name_hq"
        android:layout_below="@+id/tv_you_can_also"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/my_events"
        android:theme="@style/AppTheme.Button" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/new_big2"
        app:fabSize="normal" />

</RelativeLayout>