<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvScanNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_next"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btScanuj"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClickBtSkanuj"
        android:text="@string/scan"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvBaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/base"
        android:textSize="20sp" />

</LinearLayout>