<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krok.ticketscanner.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_marginBottom="-50dp"
        android:text="@string/loginS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorSecondaryText"
        android:theme="@style/Theme.App.Base" />

    <TextView
        android:id="@+id/passwordText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPasswordLog"
        android:layout_alignStart="@+id/name_text"
        android:layout_marginBottom="-20dp"
        android:text="@string/passwordS"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/etPasswordLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login"
        android:layout_alignRight="@+id/login"
        android:layout_below="@+id/login"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorSecondaryText"
        android:theme="@style/Theme.App.Base" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etPasswordLog"
        android:layout_alignLeft="@+id/etPasswordLog"
        android:layout_alignRight="@+id/etPasswordLog"
        android:layout_alignStart="@+id/etPasswordLog"
        android:layout_below="@+id/etPasswordLog"
        android:layout_marginTop="35dp"
        android:text="@string/sing_in"
        android:textStyle="bold"
        android:theme="@style/AppTheme.Button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sign_in_button"
        android:layout_alignLeft="@+id/sign_in_button"
        android:layout_alignRight="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_in_button"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/are_you_new"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText" />

    <Button
        android:id="@+id/sign_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="35dp"
        android:text="@string/sing_on"
        android:theme="@style/AppTheme.Button" />

</RelativeLayout>
